# patterns

./: .gitignore  pyproject.toml
fastapi/: pattern.toml
fastapi/{{ repo_name }}/: .dockerignore  Dockerfile
fastapi/{{ repo_name }}/tests/: test_logging_info.py  test_main.py  test_middleware.py  test_otel.py
fastapi/{{ repo_name }}/{{ package_name }}/: __init__.py  logging_info.py  main.py  middleware.py  otel.py  settings.py
fastapi/{{ repo_name }}/{{ package_name }}/routers/: __init__.py  health.py
gen-changelog/: pattern.toml
gen-changelog/{{ repo_name }}/: .changelog-config.yaml
github/: pattern.toml
github/{{ repo_name }}/.github/ISSUE_TEMPLATE/: bug_report.yaml
github/{{ repo_name }}/.github/workflows/: build-python.yaml  bump-version-preview.yaml  bump-version.yaml  codeql-analysis.yml  publish-docs-preview.yaml  publish-docs.yaml  release-container.yaml  release-github.yaml  test.yaml
license/: pattern.toml
license/{{ repo_name }}/: LICENSE  _Apache-2.0  _BSD-2-Clause  _BSD-3-Clause  _MIT
mkdocs/: pattern.toml
mkdocs/{{ repo_name }}/: mkdocs.yml
mkdocs/{{ repo_name }}/docs/: development.md  explanation.md  gen_doc_stubs.py  index.md  installation.md  quickstart.md
mkdocs/{{ repo_name }}/docs/howtos/: index.md
mkdocs/{{ repo_name }}/docs/reference/: index.md
mkdocs/{{ repo_name }}/docs/tutorials/: index.md
python-boilerplate/: pattern.toml
python-boilerplate/hooks/: post_gen_project.py
python-boilerplate/tests/: test_forge_project.py
python-boilerplate/{{ repo_name }}/: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  pyproject.toml
python-boilerplate/{{ repo_name }}/.github/workflows/: bump-version-preview.yaml  bump-version.yaml  publish-docs-preview.yaml  publish-docs.yaml  test.yaml
python-boilerplate/{{ repo_name }}/tests/: test_{{ package_name }}.py
python-boilerplate/{{ repo_name }}/{{ package_name }}/: __init__.py
